# mean-shift

./: CMakeLists.txt  readme.md
cpp/: linear-filter.cpp  main.cpp  roi-info-factory.cpp
cpp/filter-functions/: meanshift.cpp
headers/: linear-filter.h  roi-info-factory.h
headers/filter-function-headers/: meanshift.h
